# jasp-desktop

./: CMakeLists.txt  Dependencies.cmake  Install.cmake  JASP.pri  Modules.cmake  Patch.cmake  R.cmake  conanfile.qt.txt  conanfile.txt
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
Common/: CMakeLists.txt  Common.pro  appinfo.h  dirs.cpp  filereader.h
Desktop/: CMakeLists.txt  Desktop.pro  main.cpp  mainwindow.cpp
Desktop/analysis/: analyses.cpp  jaspcontrol.cpp
Desktop/components/JASP/Controls/: TableView.qml
Desktop/components/JASP/Widgets/: AboutWindow.qml  DataTableView.qml  JASPDataView.qml  MainWindow.qml
Desktop/components/JASP/Widgets/Ribbon/: Ribbons.qml
Desktop/data/: datasetpackage.cpp  datasetpackage.h  filtermodel.h
Desktop/data/exporters/: jaspexporter.cpp  jaspexporter.h
Desktop/data/importers/: jaspimporter.cpp
Desktop/data/importers/ods/: odssheetcell.cpp
Desktop/engine/: enginesync.cpp
Desktop/gui/: preferencesmodel.cpp
Desktop/html/js/: utils.js
Desktop/modules/: menumodel.cpp  menumodel.h  ribbonbutton.cpp  ribbonbutton.h  ribbonmodel.cpp  ribbonmodel.h
Desktop/qquick/: datasetview.cpp  datasetview.h
Desktop/resources/: icons.qrc
Desktop/utilities/: extractarchive.h  languagemodel.cpp  qutils.h
Desktop/widgets/: listmodel.h  listmodeltableviewbase.cpp
Engine/: CMakeLists.txt  engine.cpp  main.cpp  otoolstuff.cpp  rbridge.h
R-Interface/: CMakeLists.txt  jasprcpp.cpp  jasprcpp.h
Tools/CMake/: Config.cmake  Libraries.cmake  Modules.cmake  Pack.cmake  Patch.cmake  R.cmake
Tools/flatpak/: org.jaspstats.JASP.appdata.xml
Tools/macOS/: install_name_prefix_tool.sh
